[build-system]
requires = ["hatchling>=1.26.0,<2"]
build-backend = "hatchling.build"

[project]
name = "prismic-content-mcp"
version = "0.1.0"
description = "Minimal MCP server for Prismic Content and Migration APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.13.0,<2",
  "httpx>=0.27.0,<1",
  "pydantic>=2.7.0,<3",
  "aiolimiter>=1.1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9",
  "pytest-asyncio>=0.24.0,<1",
  "respx>=0.21.1,<1",
]

[project.scripts]
prismic-content-mcp = "prismic_content_mcp.__main__:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
